--- a/ecommerce/src/output.css
+++ b/ecommerce/src/output.css
@@ -630,12 +630,20 @@ video {
   align-items: center;
 }
 
+.items-stretch {
+  align-items: stretch;
+}
+
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .overflow-hidden {
@@ -838,6 +846,59 @@ video {
   line-height: 1.5rem;
   --tw-text-opacity: 1;
   color: rgb(70 91 82 / var(--tw-text-opacity));
+}
+
+.feature-style {
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 180px;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(204 231 208 / var(--tw-border-opacity));
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-align: center;
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: rgba(0, 0, 0, 0.05);
+  --tw-shadow: var(--tw-shadow-colored);
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.feature-style:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: rgba(0, 0, 0, 0.12);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.feature-img {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.feature-h6 {
+  display: inline-block;
+  border-radius: 0.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 221 228 / var(--tw-bg-opacity));
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 9px;
+  padding-bottom: 6px;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  line-height: 10px;
+  --tw-text-opacity: 1;
+  color: rgb(8 129 120 / var(--tw-text-opacity));
 }
 
 .hover\:scale-\[1\.05\]:hover {
