--- a/ecommerce/src/output.css
+++ b/ecommerce/src/output.css
@@ -562,12 +562,20 @@ video {
   position: absolute;
 }
 
+.bottom-\[10px\] {
+  bottom: 10px;
+}
+
 .left-0 {
   left: 0px;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.right-\[10px\] {
+  right: 10px;
 }
 
 .top-0 {
@@ -578,8 +586,26 @@ video {
   z-index: 999;
 }
 
+.mx-\[60px\] {
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .block {
@@ -592,6 +618,10 @@ video {
 
 .h-\[100vh\] {
   height: 100vh;
+}
+
+.h-\[40vh\] {
+  height: 40vh;
 }
 
 .h-\[50px\] {
@@ -618,12 +648,28 @@ video {
   width: 60px;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .min-w-\[100\%\] {
   min-width: 100%;
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -646,16 +692,48 @@ video {
   justify-content: space-around;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-\[50px\] {
+  border-radius: 50px;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border-0 {
   border-width: 0px;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-none {
+  border-style: none;
+}
+
+.border-\[\#08817969\] {
+  border-color: #08817969;
+}
+
+.bg-\[\#c7e9e75e\] {
+  background-color: #c7e9e75e;
 }
 
 .bg-\[\#e3e6f3\] {
@@ -663,9 +741,38 @@ video {
   background-color: rgb(227 230 243 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#ececec\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 236 236 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\.\.\/assets\/b10\.jpg\)\] {
+  background-image: url(../assets/b10.jpg);
+}
+
+.bg-\[url\(\.\.\/assets\/b17\.jpg\)\] {
+  background-image: url(../assets/b17.jpg);
+}
+
+.bg-\[url\(\.\.\/assets\/b18\.jpg\)\] {
+  background-image: url(../assets/b18.jpg);
+}
+
+.bg-\[url\(\.\.\/assets\/b4\.jpg\)\] {
+  background-image: url(../assets/b4.jpg);
+}
+
+.bg-\[url\(\.\.\/assets\/b7\.jpg\)\] {
+  background-image: url(../assets/b7.jpg);
+}
+
+.bg-\[url\(\.\.\/assets\/banner\.jpg\)\] {
+  background-image: url(../assets/banner.jpg);
 }
 
 .bg-gradient-to-r {
@@ -686,9 +793,27 @@ video {
   background-size: cover;
 }
 
+.p-\[15px\] {
+  padding: 15px;
+}
+
+.p-\[75px\] {
+  padding: 75px;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .px-\[65px\] {
@@ -711,6 +836,26 @@ video {
   padding-bottom: 14px;
 }
 
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.py-\[4px\] {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.py-\[8px\] {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
 .pl-16 {
   padding-left: 4rem;
 }
@@ -727,6 +872,19 @@ video {
   padding-left: 1.5rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.text-\[25px\] {
+  font-size: 25px;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -734,6 +892,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .italic {
@@ -750,10 +912,20 @@ video {
   color: rgb(26 26 26 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .transition {
@@ -762,6 +934,16 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .duration-\[0\.2s\] {
@@ -901,10 +1083,154 @@ video {
   color: rgb(8 129 120 / var(--tw-text-opacity));
 }
 
+.prod-card {
+  position: relative;
+  margin-bottom: 30px;
+  width: 280px;
+  border-radius: 1.5rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(235 235 235 / var(--tw-border-opacity));
+  padding: 13px;
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: rgba(0, 0, 0, 0.02);
+  --tw-shadow: var(--tw-shadow-colored);
+  transition-property: box-shadow;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.2s;
+}
+
+.prod-card:hover {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: rgba(0,0,0,0.06);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.prod-img {
+  width: 100%;
+  border-radius: 1.5rem;
+}
+
+.prod-span {
+  font-weight: 500;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(150 150 150 / var(--tw-text-opacity));
+}
+
+.prod-h4 {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgba(41, 41, 41, var(--tw-text-opacity));
+}
+
+.card-stars {
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  --tw-text-opacity: 1;
+  color: rgb(230 174 44 / var(--tw-text-opacity));
+}
+
+.banner-text {
+  --tw-text-opacity: 1;
+  color: rgb(234 235 240 / var(--tw-text-opacity));
+}
+
+.lower-banner-text {
+  --tw-text-opacity: 1;
+  color: rgba(248, 248, 248, var(--tw-text-opacity));
+}
+
+.big-banner {
+  margin: 1rem;
+  display: flex;
+  height: 300px;
+  min-width: 48%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  background-size: cover;
+  padding: 1.25rem;
+}
+
+.big-banner-btn {
+  margin-top: 1.25rem;
+  cursor: pointer;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgba(248, 248, 248, var(--tw-border-opacity));
+  background-color: transparent;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgba(248, 248, 248, var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+  transition-timing-function: linear;
+}
+
+.big-banner-btn:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(8 129 120 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 129 120 / var(--tw-bg-opacity));
+}
+
+.small-banner {
+  margin: 1rem;
+  display: flex;
+  height: 200px;
+  min-width: 370px;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  background-size: cover;
+  padding: 25px;
+}
+
+.small-banner-h5 {
+  --tw-text-opacity: 1;
+  color: rgb(119 24 24 / var(--tw-text-opacity));
+}
+
+.footer-a {
+  --tw-text-opacity: 1;
+  color: rgb(109 109 109 / var(--tw-text-opacity));
+}
+
+.footer-a:hover {
+  --tw-text-opacity: 1;
+  color: rgb(8 129 120 / var(--tw-text-opacity));
+}
+
+.footer-p {
+  --tw-text-opacity: 1;
+  color: rgb(109 109 109 / var(--tw-text-opacity));
+}
+
 .hover\:scale-\[1\.05\]:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-\[\#188178\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 129 120 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#088178\]:hover {
